@@ -1,5 +1,9 @@
 2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	*
+	chrome/content/sogo-connector/calendar/calendars-list-overlay.js:
+	fixed an exception occuring when no calendar is selected.
+
 	* chrome/content/inverse-library/sogoWebDAV.js: fixed a bug
 	occuring in the XML to JSON converter when the parsed response is
 	not flattened.
